Put the js and html files in their own directories and defined the default route to show the webpage

--- a/templates/front.html
+++ b/templates/front.html
@@ -114,7 +114,7 @@ h3 {
     </form>
 
     <div id="Results"></div>
-    <script src="script.js"></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 
 
