Modified query strings to allow maximum of 40 results instead of 10

--- a/templates/front.html
+++ b/templates/front.html
@@ -106,7 +106,7 @@ h3 {
     <hr>
     <h3>You can search by title or keyword, by author, or both!</h3>
     <form id="searchForm">
-        <input type="text" class= "Query" placeholder="Title or keyword" id="Title" data-param="q=">
+        <input type="text" class= "Query" placeholder="Title or keyword" id="Title" data-param="intitle:">
         <br>
         <input type="text" class= "Query" placeholder="Author" id="Author" data-param="inauthor:">
         <br>
